# fairdata-ansible-rabbitmq

./: README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: main.yml  rabbitmq-configure.yml  rabbitmq-service.yml  rabbitmq-users.yml
tempates/: enabled_plugins.j2
templates/: rabbitmq-env.conf.j2
