[tool.poetry]
name = "fairdata-ansible-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
molecule = {extras = ["docker"], version = "^3.6.1"}
ansible = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
